--- a/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj
+++ b/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="..\ProgressBar.h" />
     <ClInclude Include="..\similarImage.h" />
     <ClInclude Include="..\Utils.h" />
+    <ClInclude Include="..\WinToDBMiddleman.h" />
     <ClInclude Include="dupeImageFinder.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -169,6 +170,7 @@
     <ClCompile Include="..\ProgressBar.cpp" />
     <ClCompile Include="..\similarImage.cpp" />
     <ClCompile Include="..\Utils.cpp" />
+    <ClCompile Include="..\WinToDBMiddleman.cpp" />
     <ClCompile Include="dupeImageFinder.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
