--- a/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
+++ b/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="..\ProgressBar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\WinToDBMiddleman.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\ProgressBar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\WinToDBMiddleman.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
