--- a/SmartCatalogue/SmartCatalogue.vcxproj
+++ b/SmartCatalogue/SmartCatalogue.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Utils.h" />
+    <ClInclude Include="WinToDBMiddleman.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="addRecordBox.cpp" />
@@ -181,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Utils.cpp" />
+    <ClCompile Include="WinToDBMiddleman.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SmartCatalogue.rc" />
