--- a/SmartCatalogue/SmartCatalogue.vcxproj.filters
+++ b/SmartCatalogue/SmartCatalogue.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WinToDBMiddleman.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WinToDBMiddleman.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
